# sidejs

./: CMakeLists.txt  main.cpp  pack.py  readme.md
src/: sidejs.cpp  utils.cpp  utils.h
src/addons/: binding.cpp  binding.h  console.cpp  console.h  modules.cpp  modules.h  timers.cpp  timers.h  url.cpp  url.h
src/api/node/: buffer.js
src/api/node/assert/: assert.js
src/runtime/: runtime.cpp  runtime.h
tests/: package-lock.json  package.json  test.js
